--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,8 @@
 <resources>
+
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:style/Theme.Holo">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
     </style>
+
 </resources>
