--- a/app/src/main/res/xml/widgetinfo.xml
+++ b/app/src/main/res/xml/widgetinfo.xml
@@ -2,7 +2,7 @@
 
 <appwidget-provider
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialLayout="@layout/dqwidgetlayout"
+    android:initialLayout="@layout/widgetlayout"
     android:minWidth="250dp"
     android:minHeight="110dp"
     android:updatePeriodMillis="0"
